--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,3 +26,8 @@ jobs:
       run: |
         echo "Output value 1 is: ${{steps.first.outputs.swm1}}"
         echo "Output value 2 is: ${{steps.first.outputs.swm2}}"
+
+    - name: Get secret value
+      shell: bash
+      run: |
+        echo "MY_SECRET Value is: ${{secrets.MY_SECRET}}"
