--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,4 +17,4 @@ jobs:
     - name: Say Hello World on ${{ matrix.os }}
       shell: bash
       run: |
-        echo "Hello World on ${{ matrix.os }}"
+        echo "Hello World on ${{ matrix.nodejs }}"
