--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,7 @@ jobs:
         echo "Hello World on ${{ matrix.nodejs }}"
 
     - name: Say Hello World on ${{ matrix.os }}
-      if: matrix.os == 'ubuntu_latest'
+      if: matrix.os == 'ubuntu-latest'
       shell: bash
       run: |
         echo "Hello World on ${{ matrix.nodejs }}"
