--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,10 +1,37 @@
 name: 'SWM GitHub Actions Basic'
 
-on: push
+on:
+  push:
+    branches:
+      - 'main'
 
 jobs:
   first-job:
+
     name: 'First Job'
+
+    strategy:
+      matrix:
+        os: [ 'windows-latest', 'macos-latest', 'ubuntu-latest' ]
+        nodejs: [ '16.x', '18.x' ]
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - name: Say Hello World on ${{ matrix.os }}
+      shell: bash
+      run: |
+        echo "Hello World on ${{ matrix.nodejs }}"
+
+    - name: Say Hello World on ${{ matrix.os }}
+      if: matrix.os == 'ubuntu-latest'
+      shell: bash
+      run: |
+        echo "Hello World on ${{ matrix.nodejs }}"
+
+  second-job:
+
+    name: 'Second Job'
 
     strategy:
       matrix:
