--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,53 +1,31 @@
 name: 'SWM GitHub Actions Basic'
 
-on:
-  push:
-    branches:
-      - 'main'
+on: push
 
 jobs:
   first-job:
 
-    name: 'First Job'
+   name: 'First Job'
 
-    strategy:
-      matrix:
-        os: [ 'windows-latest', 'macos-latest', 'ubuntu-latest' ]
-        nodejs: [ '16.x', '18.x' ]
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Say Hello World on ${{ matrix.os }}
+    - name: Say Hello World
       shell: bash
       run: |
-        echo "Hello World on ${{ matrix.nodejs }}"
-
-    - name: Say Hello World on ${{ matrix.os }}
-      if: matrix.os == 'ubuntu-latest'
-      shell: bash
-      run: |
-        echo "Hello World on ${{ matrix.nodejs }}"
+        echo "Hello World"
 
   second-job:
 
     name: 'Second Job'
 
-    strategy:
-      matrix:
-        os: [ 'windows-latest', 'macos-latest', 'ubuntu-latest' ]
-        nodejs: [ '16.x', '18.x' ]
+    needs:
+    - 'first-job'
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Say Hello World on ${{ matrix.os }}
+    - name: Say Hello World
       shell: bash
       run: |
-        echo "Hello World on ${{ matrix.nodejs }}"
-
-    - name: Say Hello World on ${{ matrix.os }}
-      if: matrix.os == 'ubuntu-latest'
-      shell: bash
-      run: |
-        echo "Hello World on ${{ matrix.nodejs }}"
+        echo "Hello World"
