--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,4 +32,4 @@ jobs:
       with:
         webexToken:${{secrets.WEBEX_TOKEN}}
         webexRoomId:${{secrets.WEBEX_ROOM_ID}}
-        bodyText: "text": "커스텀 액션을 사용한 깃헙 액션 워크샵입니다 - 이준하 from ${{ github.repository }}"
+        bodyText: "커스텀 액션을 사용한 깃헙 액션 워크샵입니다 - 이준하 from ${{ github.repository }}"
